# nonebot-plugin-alist

./: LICENSE  README.md  pyproject.toml  ruff.toml
nonebot_plugin_alist/: __init__.py  config.py  dependency.py  models.py  request.py
nonebot_plugin_alist/api/: __init__.py  auth.py  fs.py
nonebot_plugin_alist/api/admin/: task.py
nonebot_plugin_alist/cmd/: __init__.py  alist_cmd.py  alist_commands.py  on_help.py
nonebot_plugin_alist/cmd/account/: __init__.py  on_account_add.py  on_account_del.py  on_account_info.py  on_account_list.py  on_account_switch.py  on_logout.py  on_me.py  on_relogin.py
nonebot_plugin_alist/cmd/alist/: __init__.py  on_help.py
nonebot_plugin_alist/cmd/download/: __init__.py  on_download_add.py  on_download_cancel.py  on_download_list.py  on_download_policy.py  on_download_tool.py
nonebot_plugin_alist/cmd/fs/: __init__.py  on_cd.py  on_ls.py  on_pwd.py
nonebot_plugin_alist/common/: download_option_service.py
nonebot_plugin_alist/common/auth_service/: __init__.py  login_service.py  logout_service.py
nonebot_plugin_alist/context/: __init__.py  alist_user.py
nonebot_plugin_alist/enum/: __init__.py  offline_download.py
nonebot_plugin_alist/exception/: __init__.py  alist_plugin_exception.py  auth_exception.py
nonebot_plugin_alist/hook/: __init__.py  tortoise.py
nonebot_plugin_alist/message/: __init__.py  account.py  fs.py  task.py
